# cnftoken

./: .copilot-instructions.md  .gitignore  Cargo.toml  IMPLEMENTATION_COMPLETE.md  README.md  __init__.py  main.py
.github/workflows/: ci.yml
advanced_cnf_token/: ARCHITECTURE.md  README.md  SUMMARY.md  __init__.py  adaptive_controller.py  compression_pipeline.py  core_structures.py  deterministic_encoder.py  examples.py  integration_tests.py  metrics_calculator.py  predictive_guard_system.py  stability_monitor.py
benches/: bench_compression.rs  bench_throughput.rs
core/: README_CORE.md  __init__.py  sample_core_file.txt
crates/cnf-token-core/: Cargo.toml
crates/cnf-token-core/benches/: bench_compression.rs  bench_throughput.rs
crates/cnf-token-core/src/: cnf_tokenizer.rs  detokenizer.rs  error.rs  input_guard.rs  lib.rs  mega_phrase.rs  metrics.rs  onnx_scorer.rs  pipeline.rs  pre_processor.rs  token_encoder.rs  token_id.rs  ultra_compressor.rs  vocab_pack.rs
experimental/: __init__.py
guard/: .core_metadata.json  COMPLETION_REPORT.md  GUARD_SYSTEM.md  README.md  __init__.py  audit_logger.py  auto_stage.py  change_validator.py  commit_control.py  core_hash.sha256  core_integrity.py  dual_execution.py  enforcement_rules.py  failure.py  guard_status.py  performance_guard.py  security_validator.py  state_manager.py  test_validator.py  token_drift.py
policy/: POLICY_ENGINE_ENHANCEMENT.md  __init__.py  engine.py  rules.yaml
tests/: test_deterministic.py  test_guard_system.py  test_policy_engine.py  test_reversible.py  test_stability.py
(+41 files in other folders)
